--- a/package.json
+++ b/package.json
@@ -1,19 +1,34 @@
 {
   "name": "@hank.chat/pdk",
   "version": "0.1.0",
-  "description": "",
-  "main": "src/index.ts",
+  "description": "TypeScript PDK for Hank",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsup"
   },
-  "keywords": [],
-  "author": "",
-  "license": "BSD-3-Clause",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hankchat/hank-typescript-pdk.git"
+  },
+  "keywords": [
+    "hank",
+    "chat",
+    "bot",
+    "pdk"
+  ],
+  "author": "Marc Addeo (https://hank.chat/)",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hankchat/hank-typescript-pdk/issues"
+  },
+  "homepage": "https://github.com/hankchat/hank-typescript-pdk#readme",
   "devDependencies": {
     "@extism/js-pdk": "^1.0.1",
     "@hank.chat/types": "^0.1.19",
-    "esbuild": "^0.19.6",
     "tsup": "^8.2.4",
-    "typescript": "^5.3.2"
-  }
+    "typescript": "^5.6.2"
+  },
+  "exports": "./dist/index.js"
 }
