--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,23 @@
 {
   "compilerOptions": {
-    "target": "es2020", // Specify ECMAScript target version
-    "module": "node16", // Specify module code generation
+    "target": "es2020",
+    "module": "node16",
     "moduleResolution": "node16",
+    "outDir": "dist",
     "lib": [
       "es2020"
-    ], // Specify a list of library files to be included in the compilation
+    ],
+    "strict": true,
     "types": [
       "@extism/js-pdk",
       "@hank.chat/types",
-      "./src/index.d.ts"
-    ], // Specify a list of type definition files to be included in the compilation
-    "strict": true, // Enable all strict type-checking options
-    "esModuleInterop": true, // Enables compatibility with Babel-style module imports
-    "skipLibCheck": true, // Skip type checking of declaration files
-    "allowJs": true, // Allow JavaScript files to be compiled
-    "noEmit": true // Do not emit outputs (no .js or .d.ts files)
+      "./src/plugin.d.ts"
+    ]
   },
   "include": [
-    "src/**/*.ts" // Include all TypeScript files in src directory
+    "src/**/*.ts"
   ],
   "exclude": [
-    "node_modules" // Exclude the node_modules directory
+    "node_modules"
   ]
 }
