--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@extism/js-pdk": "^1.0.1",
     "@hank.chat/types": "^0.1.22",
     "tsup": "^8.2.4",
+    "type-fest": "^4.26.1",
     "typescript": "^5.6.2"
   },
   "exports": "./dist/index.js"
