--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "types": [
       "@extism/js-pdk",
       "@hank.chat/types",
+      "@types/uuid",
       "type-fest",
       "./src/plugin.d.ts"
     ]
