--- a/package.json
+++ b/package.json
@@ -27,11 +27,10 @@
   "devDependencies": {
     "@extism/js-pdk": "^1.0.1",
     "@hank.chat/types": "^0.1.22",
-    "@types/uuid": "^10.0.0",
+    "nanoid": "^3.3.7",
     "tsup": "^8.2.4",
     "type-fest": "^4.26.1",
-    "typescript": "^5.6.2",
-    "uuid": "^10.0.0"
+    "typescript": "^5.6.2"
   },
   "exports": "./dist/index.js"
 }
