--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
   "homepage": "https://github.com/hankchat/hank-typescript-pdk#readme",
   "devDependencies": {
     "@extism/js-pdk": "^1.0.1",
-    "@hank.chat/types": "^0.1.22",
+    "@hank.chat/types": "^0.1.26",
     "nanoid": "^3.3.7",
     "tsup": "^8.2.4",
     "type-fest": "^4.26.1",
     "typescript": "^5.6.2"
   },
-  "exports": "./dist/index.js"
+  "exports": "./dist/index.js",
+  "types": "./dist/index.d.ts"
 }
